Fix artifacts when painting under a gaussian blus layer in WA-mode

Our filter layers and masks do not wrap-around their content. It is
done by-design. Because if they do,

1) Switching WA mode will have to regenerate the image projection, i.e.
   it will have to behave like "isolated mode", which causes issues
   on saving. Right now WA-mode is purely view-based transformation
   that doesn't influence how the image is rendered.

2) If we do wrapping for WA-mode, we'll also have to define it in some
   way for transformation masks and clone layers with offset. And it
   opens a rabbit hole. I have no idea how clone layers should behave in
   WA-mode :)

tldr; if you want to apply a gaussian blur filter in WA-mode, just apply
that using "Filter" menu. Only "image modification actions" do actually
support WA-mode. Layers know nothing about WA-mode.

BUG:434938